--- a/main.html
+++ b/main.html
@@ -7,9 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<div class="holder">
+		<div class="item1">1</div>
+		<div class="item2">2</div>
+		<div class="item3">3</div>
+	</div>
+	<script type="text/javascript" src="./script.js">
+	</script>
 
 </body>
 
